# courier_server

./: .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/: 20210802025113_kv.sql  down.sql
script/: setup_mysql.sh
src/: db.rs  kv.rs  main.rs  router.rs
