[package]
name = "courier_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
sqlx = { version = "0.5", features = [ 'runtime-tokio-native-tls', 'mysql', 'macros'] }
sled = "0.34.6"
[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_mysql_pool"]
